# FunTasks

./: README.md
LargeLogRegexReader/: CMakeLists.txt  TestTask.docx
LargeLogRegexReader/ModernLargeLogReaderApp/: CMakeLists.txt
LargeLogRegexReader/ModernLargeLogReaderApp/include/: CLogReader.h  CommonDefs.h  Handlers.h  Match.h  Result.h  Source.h  State.h  Utils.h
LargeLogRegexReader/ModernLargeLogReaderApp/source/: CLogReader.cpp  Handlers.cpp  Match.cpp  Source.cpp  Utils.cpp  main.cpp
LargeLogRegexReader/OldLargeLogReaderApp/: CMakeLists.txt
LargeLogRegexReader/OldLargeLogReaderApp/source/: main.cpp
LargeLogRegexReader/ReaderAppIntegrationTests/: CMakeLists.txt
LargeLogRegexReader/ReaderAppIntegrationTests/source/: ReaderAppIntegrationTests.cpp
LargeLogRegexReader/RegexImplTests/: CMakeLists.txt  ModernRegexImplTests.cpp
LargeLogRegexReader/RegexImplTests/source/: ModernRegexImplTests.cpp  RegexImplTests.cpp
LargeLogRegexReader/input/: data.txt
MSSQL_TicTacToe/: TicTacToe.sql
ParseLispExpression/: .gitignore  ParseLispExpression.sln
ParseLispExpression/ParseLispExpression/: ExpressionParser.fs  ExpressionParserTests.fs  ParseLispExpression.fsproj
ParseLispExpression/ParseLispExpressionViaLexYacc/: ExpressionParserTests.fs  LispExpressionDefs.fs  LispExpressionLexer.fs  LispExpressionLexer.fsl  LispExpressionParser.fs  LispExpressionParser.fsi  LispExpressionParser.fsy  ParseLispExpressionViaLexYacc.fsproj
PythonMIP/: projecteuler.problem185.py  projecteuler.problem345.py  requirements.txt
Sudoku/: .gitignore  Sudoku.sln
Sudoku/Sudoku.CSharp/: Defs.cs  Grid.cs  GridPoint.cs  Solver.cs
Sudoku/Sudoku.CSharp.Tests/: ProjectEulerTests.cs  SolverTests.cs  Sudoku.CSharp.Tests.csproj
Sudoku/Sudoku.FSharp/: Calculation.fs  CalculationContext.fs  CellsInfo.fs  Common.fs  Grid.fs  GridPoint.fs  NumbersBinary.fs  NumbersInfo.fs  Prediction.fs  PredictionContext.fs  Solver.fs  Sudoku.FSharp.fsproj
Sudoku/Sudoku.FSharp.Tests/: GridConversion.fs  ProjectEulerTests.fs  SolverTests.fs  Sudoku.FSharp.Tests.fsproj
T9Spelling/: CMakeLists.txt  Description.docx
T9Spelling/T9SpellingApp/: CMakeLists.txt  T9SpellingApp.cpp
T9Spelling/T9SpellingCommon/: BadDataException.h  T9Processor.h
T9Spelling/T9SpellingTests/: CMakeLists.txt  T9ProcessorTests.cpp  T9SpellingIntegrationTests.cpp
T9Spelling/input/: Bad-data.in
T9Spelling/output/: Bad-data.out
VariableStateCalc/: .gitignore  VariableStateCalc.sln
VariableStateCalc/Description/: Sample1.cs  Sample2.cs  Sample3.cs  Sample4.cs  Sample5.cs  Task.txt
VariableStateCalc/VariableStateCalcApp/: App.config  (+2 more)
(+34 files in other folders)
