cmake_minimum_required(VERSION 3.13 FATAL_ERROR)

project(LargeLogRegexReader CXX)

enable_testing()
add_subdirectory(RegexImplTests bin/RegexImplTests)
add_subdirectory(ModernLargeLogReaderApp bin/ModernLargeLogReaderApp)
add_subdirectory(OldLargeLogReaderApp bin/OldLargeLogReaderApp)
add_subdirectory(ReaderAppIntegrationTests bin/ReaderAppIntegrationTests)